--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             text-decoration: underline;
         }
     </style>
-</head>
+
 <body>
 
     <header>
@@ -90,6 +90,118 @@
             <li>To Kill a Mockingbird</li>
         </ol>
     </section>
+
+<head>
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background-color: #f4f4f4;}
+header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+h1 {
+    color: #333;
+}
+img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+}
+section {
+    margin-bottom: 20px;
+}
+.description {
+    text-align: center;
+    margin-top: 10px;
+    font-style: italic;
+    color: #666;
+}
+ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+a {
+    color: #007bff;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+</style>
+    </head>
+<style>
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 20px;
+    background-color: #f9f9f9;
+    color: #333;
+}
+header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+h1 {
+    color: #c94c4c;
+}
+img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+}
+section {
+    margin-bottom: 20px;
+}
+.ingredients, .instructions {
+    list-style-type: square;
+    padding-left: 20px;
+}
+</style>
+</head>
+<body>
+
+<header>
+<h1>Cheesecake Tarifi</h1>
+</header>
+
+<section>
+<h2></h2>
+<img src="istockphoto-1205169550-612x612.jpg" >
+<p class="description" Bu, en sevdiğim tatlı olan cheesecake in bir fotoğrafıdır.>
+<h2>Malzemeler</h2>
+<ul class="ingredients">
+    <li>200 gram bisküvi</li>
+    <li>100 gram tereyağı (eritilmiş)</li>
+    <li>400 gram krem peynir</li>
+    <li>200 gram toz şeker</li>
+    <li>3 adet yumurta</li>
+    <li>1 tatlı kaşığı vanilya özütü</li>
+    <li>200 ml krema</li>
+</ul>
+</section>
+
+<section>
+<h2>Yapılışı</h2>
+<ol class="instructions">
+    <li>Bisküvileri robotta un haline getirin ve eritilmiş tereyağı ile karıştırın.</li>
+    <li>Karışımı kelepçeli kek kalıbının tabanına eşit şekilde yayın ve buzdolabında 30 dakika dinlendirin.</li>
+    <li>Krem peyniri ve toz şekeri mikserle çırpın.</li>
+    <li>Yumurtaları teker teker ekleyerek çırpmaya devam edin.</li>
+    <li>Vanilya özütü ve kremayı ekleyip karıştırın.</li>
+    <li>Buzdolabından çıkardığınız bisküvi tabanının üzerine karışımı dökün.</li>
+    <li>Önceden ısıtılmış 160 derece fırında 60 dakika pişirin.</li>
+    <li>Fırından çıkardıktan sonra oda sıcaklığında soğutun ve ardından buzdolabında en az 4 saat dinlendirin.</li>
+    <li>Servis etmeden önce üzerine dilediğiniz meyve sosunu ekleyebilirsiniz.</li>
+</ol>
+</section>
+
+<footer>
+<p>Bu tarif <a href="https://www.yemek.com/tarif/cheesecake/" target="_blank">Yemek.com</a> sitesinden alınmıştır.</p>
+</footer>
 
 </body>
 </html>
